authenticating and redirecting to correct view, now mount chat

--- a/JobSityChat/Views/Home/Register.cshtml
+++ b/JobSityChat/Views/Home/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model JobSityChat.Models.UserRegister
+﻿@model JobSity.Core.Communications.UserRegister
 
 @{
     ViewData["Title"] = "Registro de novo usuário";
