--- a/JobSityChat/Views/Home/Index.cshtml
+++ b/JobSityChat/Views/Home/Index.cshtml
@@ -1,17 +1,24 @@
-﻿<body>
-    <header>
-        <h1>Portal de Login</h1>
-    </header>
+﻿@model JobSity.Core.Communications.UserLogin
+<body>
     <main>
-        <form id="login_form" class="form_class" action="login/login-access.php" method="post">
+        <form id="login_form" class="form_class" asp-controller="Home" asp-action="login" method="post">
             <div class="form_div">
-                <label>Login:</label>
-                <input class="field_class" name="login_txt" type="text" placeholder="Insira o seu login" autofocus>
-                <label>Password:</label>
-                <input id="pass" class="field_class" name="password_txt" type="password" placeholder="Insira a sua senha">
-                <button class="submit_class" type="submit" form="login_form" onclick="return validarLogin() ">Log in</button>
+                 <div class="form-group">
+                    <label asp-for="Email"></label>
+                    <input asp-for="Email" class="form-control" />
+                    <span asp-validation-for="Email" class="text-danger"></span>
+                </div>
+
+                 <div class="form-group">
+                    <label asp-for="Password"></label>
+                    <input type="password" asp-for="Password" class="form-control" />
+                    <span asp-validation-for="Password" class="text-danger"></span>
+                </div>
+              <div class="form-group">
+                    <button type="submit" class="btn btn-primary btn-block">LogIn</button>
+                </div>
             </div>
-            <div class="info_div">
+          <div class="info_div">
                 <p>Not a registered user yet?<a asp-controller="Home" asp-action="Register">Register!</a></p>
             </div>
         </form>
