--- a/JobSityChat/wwwroot/css/site.css
+++ b/JobSityChat/wwwroot/css/site.css
@@ -4,11 +4,11 @@
 }
 
 body {
-    background-color: lightgreen;
+    background-color: white;
 }
 
 header {
-    background-color: black;
+    background-color: gray;
     color: white;
     display: flex;
     align-items: center;
@@ -30,7 +30,6 @@ main {
     justify-content: center;
     height: 75vh;
     width: 100%;
-    background: url(https://upload.wikimedia.org/wikipedia/commons/thumb/0/0b/Mountains-1412683.svg/1280px-Mountains-1412683.svg.png) no-repeat center center;
     background-size: cover;
 }
 
@@ -92,7 +91,7 @@ main {
 
 footer {
     height: 10vh;
-    background-color: black;
+    background-color: gray;
     color: white;
     display: flex;
     align-items: center;
