--- a/JobSityChat/Views/Home/Chat.cshtml
+++ b/JobSityChat/Views/Home/Chat.cshtml
@@ -1,24 +1,50 @@
 ﻿<div class="container col-6">
-        <div class="form-group">
-            <label for="usuario">Usuário</label>
-            <input type="text" id="usuario" class="form-control"/>
-        </div>
-        <div class="form-group">
-            <label for="mensagem">Mensagem</label>
-            <textarea class="form-control" id="mensagem" rows="2"></textarea>
-        </div>
-        <input type="button" class="btn btn-primary" id="send" value="Enviar Mensagem" />
+    <div class="form-group">
+        <label for="usuario">Usuário</label>
+        <input type="text" id="usuario" class="form-control" />
     </div>
-    <div class="row">
-        <div class="col-12">
-            <hr />
-        </div>
+    <div class="form-group">
+        <label for="mensagem">Mensagem</label>
+        <textarea class="form-control" id="mensagem" rows="2"></textarea>
     </div>
-    <div class="container col-6">
-        <ul class="list-group" id="messagesList"></ul>
+    <input type="button" class="btn btn-primary" id="send" value="Enviar Mensagem" />
+</div>
+<div class="row">
+    <div class="col-12">
+        <hr />
     </div>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/aspnet-signalr/1.1.4/signalr.min.js'></script>
-    <script src='main.js'></script>
+</div>
+<div class="container col-6">
+    <ul class="list-group" id="messagesList"></ul>
+</div>
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
+<script src="~/js/signalr/dist/browser/signalr.js"></script>
+<script type="text/javascript">
+   "use strict";
+var connection = new signalR.HubConnectionBuilder().withUrl("/chatHub").build();
+
+document.getElementById("send").disabled = true;
+connection.on("ReceiveMessage", function (user, message) {
+    var li = document.createElement("li");
+    document.getElementById("messagesList").appendChild(li);
+    li.textContent = `${user} says ${message}`;
+});
+
+connection.start().then(function () {
+    document.getElementById("send").disabled = false;
+}).catch(function (err) {
+    return console.error(err.toString());
+});
+
+document.getElementById("send").addEventListener("click", function (event) {
+    var user = $("#usuario").val();
+    var message =$("#mensagem").val();
+    connection.invoke("SendMessage", user, message).catch(function (err) {
+        return console.error(err.toString());
+    });
+    $("#usuario").val("");
+    $("#mensagem").val("");
+    event.preventDefault();
+});
+    
+</script>
